@@ -15,7 +15,7 @@ module Devise
     def database_authenticatable(options={})
       null    = options[:null] || false
       default = options.key?(:default) ? options[:default] : ("" if null == false)
-      include_email =  !self.respond_to?(:authentication_keys) || self.authentication_keys.include?(:email)
+      include_email = !respond_to?(:authentication_keys) || self.authentication_keys.include?(:email)
 
       apply_devise_schema :email,              String, :null => null, :default => default if include_email
       apply_devise_schema :encrypted_password, String, :null => null, :default => default, :limit => 128
@@ -39,9 +39,13 @@ module Devise
     end
 
     # Creates reset_password_token and reset_password_sent_at.
-    def recoverable
+    #
+    # == Options
+    # * :reset_within - When true, adds a column that reset passwords within some date
+    def recoverable(options={})
+      use_within = options.fetch(:reset_within, Devise.reset_password_within.present?)
       apply_devise_schema :reset_password_token, String
-      apply_devise_schema :reset_password_sent_at, DateTime
+      apply_devise_schema :reset_password_sent_at, DateTime if use_within
     end
 
     # Creates remember_token and remember_created_at.
