@@ -125,11 +125,11 @@ Devise.setup do |config|
   #
   # Defines which key will be used when recovering the password for an account
   # config.reset_password_keys = [ :email ]
-  #
-  # Time interval you can reset your password with a reset password key
-  # Don't put a too small interval or your users won't have the time to change their passwords
-  # Default to 1 hour
-  config.reset_password_within = 1.hour
+
+  # Time interval you can reset your password with a reset password key.
+  # Don't put a too small interval or your users won't have the time to
+  # change their passwords.
+  config.reset_password_within = 2.hours
 
   # ==> Configuration for :encryptable
   # Allow you to use another encryption algorithm besides bcrypt (default). You can use
